# vocalsync-studio

./: .gitignore  LICENSE  README.en.md  README.ja.md  README.md  SECURITY.md  index.html  main.py  make_icon.py  package-lock.json  package.json  requirements.txt  security_best_practices_report.md  vite.config.ts
.github/: dependabot.yml
core/: audio_recorder.py  downloader.py  ffmpeg_check.py  format_helper.py  pitch_data.py  pitch_detector.py  video_player.py
docs/: USER_GUIDE.en.md  USER_GUIDE.ja.md  USER_GUIDE.md
scripts/: build-user-guide.mjs  pack-portable-docs.mjs  pack-portable.mjs
src/: App.svelte
src-tauri/: Cargo.toml  generate_icon.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  security.rs
src-tauri/src/commands/: audio_commands.rs  device_commands.rs  download_commands.rs  lyrics_commands.rs  melody_commands.rs  mod.rs  settings_commands.rs  updates_commands.rs
src-tauri/src/core/: audio_aligner.rs  audio_engine.rs  center_channel_cancel.rs  crepe_engine.rs  key_detector.rs  lyrics_parser.rs  media_loader.rs  melody_extractor.rs  melody_source_detector.rs  melody_track.rs  midi_parser.rs  mod.rs  pitch_data.rs  pitch_engine.rs  pyin_engine.rs  resampler.rs  settings.rs  subtitle_extractor.rs  ultrastar_parser.rs  wsola.rs  ytdlp_engine.rs
src/components/: CalibrationVisualizer.svelte  Icon.svelte  LanguageSwitcher.svelte  LyricsPanel.svelte  LyricsSyncEditor.svelte  PitchIndicator.svelte  (+2 more)
ui/: pitch_curve_panel.py  pitch_indicator.py  recording_page.py  theme.py  vu_meter.py
(+18 files in other folders)
